--- a/index.html
+++ b/index.html
@@ -77,14 +77,13 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
       <h2>Home, work, and school locations</h2>
     </div>
     <div id="lets-connect" class="dark-gray">
-      <h2 class="orange center-text">My Recent Tweets</h2>
+      <h2 class="orange center-text">JavaScript Tweets</h2>
         <ul id="footerContacts" class="flex-box">
 
-    <a class="twitter-timeline"
-    href="https://twitter.com/gregamoffatt"
-    data-widget-id="730300765537886208">Tweets by @gregamoffatt</a>
-	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
-	</script>
+    <a class="twitter-timeline
+     href="https://twitter.com/hashtag/javascript"
+     data-widget-id="730973347446558728">#javascript Tweets</a>
+     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
       </ul>
     </div>
   </div>
