--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 -->
 <head>
   <!-- This tells the browser how to read the document. -->
-  <meta charset="utf-8">
+  
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Tells the browser what the title of this page should be. -->
   <title>Resume</title>
 
   <!-- Load the page styles. -->
   <link href="css/style.css" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Quattrocento+Sans' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Quattrocento+Sans' rel='stylesheet'>
+  <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/font-awesome.min.css" rel="stylesheet">
 
   <!--
@@ -43,6 +47,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 
   <!-- More on helper.js in the class -->
   <script src="js/helper.js"></script>
+  <script src="js/bootstrap.js"></script>
 
   <!--
   Uncomment the <script> tag below when you're ready to add an interactive
