--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
      href="https://twitter.com/hashtag/javascript"
      data-widget-id="730973347446558728">#javascript Tweets</a>
      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+      <!--twitter widget created from my account, showing #javascript tweets-->
       </ul>
     </div>
   </div>
